v1.11.3
- Updated to PVR API v2.1.0

v1.11.2
- Debian packaging: fix library install path
- Miscellaneous backend fixes

v1.11.1
- Updated to PVR API v2.0.0

v1.11.0
- Updated to PVR API v1.9.7

v1.10.6
- updated language files from Transifex

v1.10.5
- fixed issue where RPi user were unable to watch live tv due to subtle socket differences on that platform
- fixed issue where recording list would get out of date and not reflect reality of backend

v1.10.4
- Updated to use new libplatform-dev

v1.10.3
- Updated to PVR API v1.9.6

v1.10.2
- Updated to PVR API v1.9.5

v1.10.1
- Updated to PVR API v1.9.4
- Updated to GUI API v5.8.0

v1.9.21
- updated language files from Transifex

v1.9.20
- updated language files from Transifex
- minor changes to conform with C++11

v1.9.19
- added getBackendHostname function
- added support for ATSC subchannel numbers, fixing 'no tuner available' message users were getting with this type of channel
- fixes a problem with playback of radio stations
- added recording artwork
- added fanart 

v1.9.18
- Fixed mime-type for MPEG-TS

v1.9.17
- updated language files from Transifex

v1.9.16
- change library name to Kodi

v1.9.15
- fixed deadlock when activating the addon on some darwin (osx, ios) runtimes

v1.9.14
- updated language files from Transifex

v1.9.13
- updated language files from Transifex

v1.9.11
- updated to API v1.9.2

v1.9.9
- updated language files from Transifex

v1.9.8
- fixed bug that could cause connection to close prematurely 

v1.9.7
- updated language files from Transifex

v1.9.6
- updated language files from Transifex

v1.9.6
- added dialog to set recurring recordings, including recurrence type, padding, number of recordings to keep, and recording directory
- added support for EDL 
- added support for retrieving and storing last playback position
- now requires NextPVR 3.1.1 or higher