@@ -1,5 +1,6 @@
 v1.11.3
 - Updated to PVR API v2.1.0
+- Automatically fill in platform and library name
 
 v1.11.2
 - Debian packaging: fix library install path
